@@ -3,6 +3,11 @@ set -e
 
 which update-grub >/dev/null 2>&1 || exit 0
 
+if type running-in-container >/dev/null 2>&1 && \
+   running-in-container >/dev/null; then
+	exit 0
+fi
+
 set -- $DEB_MAINT_PARAMS
 mode="${1#\'}"
 mode="${mode%\'}"
